rollouts-legacy/v1/rollout-consumer.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: dubbo3-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo3-consumer
  template:
    metadata:
      labels:
        app: dubbo3-consumer
        sidecar.istio.io/inject: "true"
        version: v2
    spec:
      containers:
        - name: container-1
          image: ghcr.io/muma378/spring-dubbo3-consumer:v0.1
          readinessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
  strategy:
    canary:
      canaryService: dubbo3-consumer-canary
      stableService: dubbo3-consumer
      trafficRouting:
        istio:
          virtualService:
            name: consumer
            routes:
              - test-v1
      steps:
        - setCanaryScale:
            weight: 20
        - pause: {}
        - setWeight: 20
        - pause:
            duration: 10m
        - setWeight: 50
        - pause:
            duration: 10m
        - setWeight: 100
        - pause: {}
